public/css/styles.css
/* ... */
.colors{
    -webkit-box-flex:0;
    -ms-flex:0 0 15px;
    flex:0 0 15px;
}
.colors-wrapper{
    width:15px;
}
.color, .data-range{
    -o-transition:0.1s ease-out;
    -moz-transition:0.1s ease-out;
    -webkit-transition:0.1s ease-out;
    transition:0.1s ease-out;
}
.color, .data-range{
    height:40px;
    margin:0.5px 0px;  
}
.color:last-child{
    border-bottom-right-radius: 3px!important;
    border-bottom-left-radius: 3px!important;
}
.on-color-hover{
    border:1px solid #f9ebd7;
    -o-transform:scale(1.2);
    -moz-transform:scale(1.2);
    -ms-transform:scale(1.2);
    -webkit-transform:scale(1.2);
    transform:scale(1.2);
    border-radius: 0px!important;
}
.light .on-color-hover{
    border:1px solid #000;
}
.key-data{
    -webkit-box-flex:1;
    -ms-flex:1 1 auto;
    flex:1 1 auto;
    margin-left: 15px;
}
.data-range{
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    white-space: nowrap;
}  
.data-line, .data-line-small{
    display: none;
}
/* begin sideBar */
#sideBar{
    display:-webkit-box;
    display:-ms-flexbox;
    display:flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    width:300px;
    height: 100%;
    background-color:#1b1b1b;
    opacity: 0.9;
    position: fixed;
    top:50px;
    overflow-y: hidden;
    -o-transition:transform 0.3s ease-in-out;
    -moz-transition:transform 0.3s ease-in-out;
    -webkit-transition:transform 0.3s ease-in-out;
    transition:transform 0.3s ease-in-out;
    visibility: hidden;
    z-index: 11;
    padding-bottom: 50px;
    /* -ms-touch-action:none;touch-action:none; */
}
.light #sideBar{
    background-color: #002b6b;
}
.sideBar-header{
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    align-items: center;
    padding:0px 12px;
    border-bottom:1px solid #fff;
}
.closeBtn{
    -webkit-box-flex:1; -ms-flex:1; flex:1;
    color:#fff;
    text-align: end;
}
.closeBtn:hover{
    color:#626262;
}
.light .closeBtn:hover{
    color:#cacaca;
}
#livePulse{
    width: 6px;
    height: 6px;
    border-radius: 10px;
    background-color: #f44336;
    -o-animation: pulse 0.8s ease-in-out 0s infinite alternate;
    -moz-animation: pulse 0.8s ease-in-out 0s infinite alternate;
    -webkit-animation: pulse 0.8s ease-in-out 0s infinite alternate;
    animation: pulse 0.8s ease-in-out 0s infinite alternate;
}
.pulse{
    margin:0px 6px 0 0; 
    color: #f44336;
}
#timeStamp{
    margin:0;
    font-size:14px;
}
/* begin switch */
#switchWrapper{
    width:100%;
    height:148px;
}
.switch-titles{
    font-size: 1.5em;
    font-weight: 100;
    opacity: 0.4;
    cursor:pointer;
}
.switch-target-circles{
    opacity: 0;
    cursor: pointer;
}
#casesTitle{
    opacity: 1;
}
/* end switch */
/* begin dropdown */
.options-div{
    width: auto;
    height: 39px;
    overflow-x: hidden;
    overflow-y: hidden;
    padding:0px;
    margin-bottom:0px;
}
#dropDown{
    position: -webkit-sticky;
    position: sticky; 
    top:-1px;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
    height:40px;
    background-color:#faebd7; 
    border-bottom:1px solid #1d1d1d;
    cursor: pointer;
}
.light #dropDown{
    box-shadow: 0px 0px 3px 0px black;
    background-color:#fff; 
}
.flex-span{
    -ms-flex-item-align: center;-ms-grid-row-align: center;align-self: center;
    margin-left:15px;
}
#dropDownTitle{
    font-weight: 400;
    color:#282828;
}
#chartOptionArrow{
    filter:invert(1);
}
.light #chartOptionArrow{
    filter:none;
}
.dropDown-arrow{
    width:30px;
    height:30px;
    background-position: 0px 0px;
    margin-right:5px;
    opacity: 0.5;
    cursor: pointer;
    -o-transition:0.1s ease-in;  
    -moz-transition:0.1s ease-in;  
    -webkit-transition:0.1s ease-in;  
    transition:0.1s ease-in;
}
.dropDown-arrow:hover, .dropDown-arrow:active, .dropDown-arrow:focus{
    opacity: 1;
}
#testsMenu, #deathsMenu, #vaccMenu{
    display: none;
}
.cases-btns, .deaths-btns, .tests-btns, .vacc-btns, .chart-btns{
    font-family: 'Gill Sans', sans-serif;
    display: block;
    width: 100%;
    height: 40px;
    outline: none;
    border: none;
    background-color: #3d3c3a;
    color:#faebd7;
    font-size: 1em;
    font-weight: 100;
    text-align: left;
    -o-transition: 0.1s ease-in;
    -moz-transition: 0.1s ease-in;
    -webkit-transition: 0.1s ease-in;
    transition: 0.1s ease-in;
    cursor: pointer;
    padding:0 0 0 15px;
}
.cases-btns:hover{
    background-color:#96dcf4!important;
    color:#000!important;
}
.cases-btns:active, .cases-btns:focus{
    background-color:#54cbf2!important;
    color:#000!important;
}
.tests-btns:hover{
    background-color:#f9d7a4!important;
    color:#000!important;
}
.tests-btns:active, .tests-btns:focus{
    background-color:#f4bc68!important;
    color:#000!important;
}
.deaths-btns:hover{
    background-color:#ff9890!important;
    color:#000!important;
}
.deaths-btns:active, .deaths-btns:focus{
    background-color:#f6584c!important;
    color:#000!important;
}
.vacc-btns:hover{
    background-color:#bafbdf!important;
    color:#000!important;
}
.vacc-btns:active, .vacc-btns:focus{
    background-color:#4cf6af!important;
    color:#000!important;
}
/* end dropdown */
/* begin world stats */
#statsWrapper{
    overflow-y: scroll;
    -webkit-box-flex: 1;
    -ms-flex: 1;
    flex: 1;
}
/* ... */

